# prac_robot

./: CMakeLists.txt  Dockerfile  README.md  create_container.sh  frames_2024-04-05_18.14.01.gv  frames_2024-04-05_18.44.45.gv  frames_2024-04-05_18.51.29.gv  frames_2024-04-05_18.54.00.gv  package.xml
config/: laser_bridge.yaml  mapper_params_online_async.yaml  nav2_params.yaml  navigate_config.rviz  prac_controller.yaml  prac_robot.rviz
description/: example_gazebo.xacro  example_robot.urdf.xacro  inertial_macros.xacro  inertial_macros.xarco  lidar.xacro  messy_world.sdf  prac_robot.urdf.xacro  prac_robot_core.xacro  ros2_control.xacro
install/prac_robot/share/prac_robot/: local_setup.dsv  package.ps1  package.zsh
install/prac_robot/share/prac_robot/launch/: launch_sim.py  my_world.sdf
launch/: launch_explore.py  launch_navigate.py  launch_sim.py  localisation_AMCL_launch.py  path_planning_launch.py  rviz_launch.py  slam_online_async_launch.py  slam_online_async_localisation.py
log/: latest_build
maps/: better_map.data  better_map.pgm  better_map.yaml  clear_world.pgm  clear_world.yaml  clear_world_serial.data
prac_robot/: README.md  frames_2024-05-29_05.49.11.gv  frames_2024-05-31_06.07.15.gv  package.xml
prac_robot/config/: explore_config.rviz  nav2_params.yaml  navigate_config.rviz  prac_controller.yaml
prac_robot/description/: depot_world.sdf  inertial_macros.xacro  lidar.xacro  messy_world.sdf  prac_robot.urdf.xacro  ros2_control.xacro
prac_robot/description/test_box/: model.sdf
prac_robot/install/: local_setup.sh  setup.sh
prac_robot/install/prac_robot/share/prac_robot/: package.bash  package.dsv  package.sh
prac_robot/install/prac_robot/share/prac_robot/cmake/: prac_robotConfig.cmake
prac_robot/install/prac_robot/share/prac_robot/launch/: diff_drive_robot.urdf  robot.sdf
prac_robot/launch/: launch_explore.py  launch_navigate.py  localisation_AMCL_launch.py  rviz_launch.py  slam_online_async_map.py
prac_robot/maps/: depot_map.pgm  depot_map.yaml
prac_robot/src/: RRTstar.cpp  RRTstar.hpp  myPlanner.cpp  plan_helper.hpp  simple_Astar.cpp
src/: mapProcessor.cpp  myController.cpp  myMPC.cpp  myPlanner.cpp  planHelper.hpp  plan_helper.hpp  simple_Astar.cpp  simple_Astar.hpp  simple_LQR.cpp  simple_LQR.hpp
